fix: B4 hamburger align

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4378,6 +4378,7 @@ input[type="button"].btn-block {
 
 .navbar-toggler-icon {
   display: inline-block;
+  padding: 6px;
   width: 1.5em;
   height: 1.5em;
   vertical-align: middle;
@@ -10665,13 +10666,13 @@ header.masthead h1 {
 }
 
 .fa-star:hover {
-  font-size: 20px;
+  font-size: 22px;
 }
 
 .country-names {
   color: #666666;
   margin: 0;
-  padding: 10px 0 0 0;
+  padding: 4px 0 2px 0;
   font-size: 15px;
 }
 
